force-app/main/default/objects/Payment_Gateway_Config__mdt/Payment_Gateway_Config__mdt.object-meta.xml
<CustomObject>
    <label>Payment Gateway Config</label>
    <pluralLabel>Payment Gateway Config</pluralLabel>
</CustomObject>