force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Auth_Overriding_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Auth_Overriding_Apex_Class__c</fullName>
    <inlineHelpText>Name of the Apex class that extends RazorpayAuth and overrides the getNamedCredential() method to return the named credential used for authentication.
By default, the getNamedCredential() method in the RazorpayAuth class returns the value from
Payment_Gateway_Config__mdt.getInstance(&apos;Razorpay_Config&apos;).Named_Credential__c.</inlineHelpText>
    <label>Auth Overriding Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>