force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Enable_System_Debugs__c.field-meta.xml
<CustomField>
    <fullName>Enable_System_Debugs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for debugging.</inlineHelpText>
    <label>Enable System Debugs</label>
    <type>Checkbox</type>
</CustomField>