force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Log_API_Request__c.field-meta.xml
<CustomField>
    <fullName>Log_API_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log API Request</label>
    <type>Checkbox</type>
</CustomField>