force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Log_Errors__c.field-meta.xml
<CustomField>
    <fullName>Log_Errors__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Errors</label>
    <type>Checkbox</type>
</CustomField>