force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Log_Webhook_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Webhook_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Webhook Details</label>
    <type>Checkbox</type>
</CustomField>