force-app/main/default/objects/Payment_Gateway_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <inlineHelpText>API Name of the named credential</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>